# cmake-dll-demo

./: README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cxx
src/math/: CMakeLists.txt
